@@ -1,3 +1,4 @@
+- ErmaC : define macro for OS X Versions
 - Slice and Clover Team : Replace "NULL" terminated strings and fit Boot2 Sectors size
 - ErmaC : Update bootargs
 - crazybirdy : Fit length for "Loading Darwin"
